# solow-mrw-growth

./: README.md  pyproject.toml
scripts/: fetch_wdi_all_countries.py
scripts/data/: wdi_school_pop_gdp_inv_1985_2025.csv
src/solow_mrw/: __init__.py  model.py  plots.py  run_germany_analysis.py  wdi.py
